<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dip">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_camera_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_devType"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <Spinner
                android:id="@+id/sp_camera_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10.0" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_camera_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_devName"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/ed_camera_name"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_ip"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/ed_ip"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>


        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_stream_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_streamType"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <Spinner
                android:id="@+id/sp_stream_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10.0" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_http_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_webPort"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/ed_http_port"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_media_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_mediaPort"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/ed_media_port"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_userName"
                android:textColor="@color/settings_field_color"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/ed_user_name"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_password"
                android:textColor="@color/settings_field_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow09"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1.0"
                android:width="100dip"
                android:gravity="right"
                android:text="@string/ipc_info_config_uid"
                android:textColor="@color/settings_field_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_uid"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="10.0"
                android:singleLine="true"
                android:text="" />
        </TableRow>
    </TableLayout>
</ScrollView>

